<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_unit_measure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/startUnityMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:checkedButton="@id/celsiusOption"
        app:layout_constraintTop_toBottomOf="@id/startQuestion"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/celsiusOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_celsius"/>

        <RadioButton
            android:id="@+id/fahrenheitOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_fahrenheit"/>
    </RadioGroup>

    <EditText
        android:id="@+id/temperatureInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/temperature"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/startUnityMeasure"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/conversion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureInput"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:hint="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertButton"/>

    <ImageView
        android:id="@+id/funnyImage"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/thermometer"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>